<resources>
    <string name="app_name">Organize</string>
    <string name="texto_intro1">Organize suas contas\n de onde estiver</string>
    <string name="texto2_intro1">Simples, fácil de usar e grátis</string>
    <string name="imagem">Imagem</string>
    <string name="texto_intro2">Saiba para onde está indo o seu dinheiro</string>
    <string name="texto2_intro2">Categorizando os lançamentos e vendo\n o destino de cada centavo</string>
    <string name="texto_intro3">Nunca mais esqueça de pagar uma conta</string>
    <string name="texto2_intro3">Receba alertas quando quiser</string>
    <string name="texto_intro4">Tudo organizado, no\ncelular ou no computador</string>
    <string name="texto2_intro4">Use no seu smartphone e acessando o\n Organize pelo site</string>
    <string name="crie_sua_conta_gratis">Crie sua conta grátis</string>
    <string name="junte_se_a_mais_de_meio_milhao_nde_pessoas">Junte-se a mais de meio milhão\nde pessoas e começe já</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="ja_tenho_conta">Já tenho conta</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="nome">Nome</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="despesa">Despesa</string>
    <string name="receita">Receita</string>
    <string name="zero_reais">R$ 0.00</string>
    <string name="ex_salario">Ex.: Salário</string>
    <string name="ex_salario_mensal">Ex.: Salário Mensal</string>
    <string name="ex_01_05_2020">Ex.: 01/05/2020</string>
    <string name="carregando">Carregando...</string>
    <string name="rs_0_00">R$ 0,00</string>
    <string name="saldo_geral">Saldo geral</string>
    <string name="cadastro">Cadastro</string>
    <string name="sair">Sair</string>
    <string name="organize">Organize</string>
</resources>