<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPrincipalSaudacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/carregando"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPrincipalSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rs_0_00"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrincipalSaldoGeral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saldo_geral"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:mcv_showOtherDates="all"
        app:mcv_selectionColor="#00F"
        app:mcv_tileSize="50dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyMovimentos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>